{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "42f31813-f97b-47c4-8f30-40b26831c2a3",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "e901b19e-7d34-4850-acef-6cef83e3d6ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "7c038675-20ee-4503-b4fc-894d08bfdf5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3b7c08e-dcca-4647-8ea4-36081d3c2d10",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bad01c1-48cd-489d-b72c-85fdb836b62d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}